# HF

./: .gitignore  CMakeLists.txt  VirtualExamples.cpp  hartree2DSure.cpp  makefile  params.json
src/: Hubbard.cpp  Hubbard.h  HubbardSelfCon.cpp  HubbardSelfCon.h  Main.cpp  fft.cpp  fft.h  integral_utils.cpp  integral_utils.h  json_utils.cpp  json_utils.h  param.cpp  param.h
test/: CMakeLists.txt  Hubbard_unit_tests.cpp  Makefile
